--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -18,7 +18,7 @@ html, body {
 html {
     box-sizing: border-box;
     font-family: $text-font-stack;
-    font-size: 62.5%;
+    //font-size: 62.5%;
     min-height: 100%;
 }
 
