--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,9 @@
 ///////////////////////////////////////////////////////////////////////////////
-// Nathanial Hapeman's Resume Website v2.0
+// Nathanial Hapeman's Resume Website v3.0
 // File: main.scss
 // Purpose: Imports all static scss files.
 ///////////////////////////////////////////////////////////////////////////////
 
 @import 'globals';
 @import 'mediaqueries';
-@import 'general';
+@import 'placeholders';
