--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -57,6 +57,7 @@ $code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
 // Padding
 $padding: 1rem !default;
 $padding-small: .5rem;
+$padding-medium: 1.5rem;
 $padding-large: 2.0rem;
 $padding-x-large: 3.0rem;
 
