--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -73,3 +73,5 @@ $margin-xxx-large: 5.0rem;
 // Transitions
 $transition-time: .25s !default; //global transition time
 $transition-function: ease !default; //transition function for CSS3 transitions
+
+$scale: 1.05;
