progress on dropdown menu

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -75,3 +75,5 @@ $transition-time: .25s !default; //global transition time
 $transition-function: ease !default; //transition function for CSS3 transitions
 
 $scale: 1.05;
+$logo-small: 15px;
+$logo: 25px;
