--- a/src/scss/placeholders.scss
+++ b/src/scss/placeholders.scss
@@ -57,6 +57,11 @@
 // Misc
 ////////////////////////////////////////////////////////////////////////
 
+
+%default-size {
+    font-size: 1.6rem;
+}
+
 %box-shadow {
     box-shadow: 0 4px 6px 0 $shadow;
 }
