Add more text to vue project

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -64,6 +64,7 @@ $padding-x-large: 3.0rem;
 // Margin
 $margin: 1rem !default;
 $margin-small: .75rem;
+$margin-medium: 1.5rem;
 $margin-large: 2.0rem;
 $margin-x-large: 3.0rem;
 $margin-xx-large: 4.0rem;
