Add more to vue project essay.

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -60,6 +60,8 @@ $padding-small: .5rem;
 $padding-medium: 1.5rem;
 $padding-large: 2.0rem;
 $padding-x-large: 3.0rem;
+$padding-xx-large: 4.0rem;
+$padding-xxx-large: 5.0rem;
 
 // Margin
 $margin: 1rem !default;
