Add awesome holder mixin. Begin media queries.

--- a/src/scss/mediaqueries.scss
+++ b/src/scss/mediaqueries.scss
@@ -7,6 +7,10 @@ $medium: rem-calc(768);
 $large: rem-calc(1280);
 $x-large: rem-calc(1440);
 
+
+$break-large: 900px;
+
+
 @function rem-calc($size) {
     $rem-size: $size / 16;
     @return #{$rem-size} rem;
